* ltconfig.in (linux-gnu*): Set hardcode_into_libs=yes.

--- a/ltconfig.in
+++ b/ltconfig.in
@@ -1628,6 +1628,7 @@ linux-gnu*)
   finish_cmds='PATH="\$PATH:/sbin" ldconfig -n $libdir'
   shlibpath_var=LD_LIBRARY_PATH
   shlibpath_overrides_runpath=no
+  hardcode_into_libs=yes
 
   if test -f /lib/ld.so.1; then
     dynamic_linker='GNU ld.so'
