* configure.in: AC_SUBST variables that are used by ltconfig to build libtool.

--- a/configure.in
+++ b/configure.in
@@ -34,7 +34,9 @@ AC_SUBST(aclocaldir)
 dnl Use the specified CC and LD while running ltconfig.
 AC_PROG_CC
 AM_PROG_LD
+AC_SUBST(LD)
 AM_PROG_NM
+AC_SUBST(NM)
 AC_PROG_LN_S
 
 dnl For the `lineno' script (which puts line numbers into `ltconfig').
@@ -44,6 +46,7 @@ dnl Check for dlopen support
 AC_LIBTOOL_DLOPEN
 AC_LIBTOOL_SETUP
 AC_SUBST(DLLTOOL)
+AC_SUBST(FILE)
 AC_SUBST(OBJDUMP)
 AC_SUBST(AS)
 
