* ltconfig.in (ac_compile): Use $ac_ext instead of .c. (ac_link): Likewise. (dlfcn.h, ac_try): Do not add filename, it is already in ac_compile. Reported by Stephane Conversy <Stephane.Conversy@lri.fr>
* ltconfig.in (linux-gnu*): Disable hardcode_into_libs until it
works together with fast_install.

* libtool.m4: Use host when --target is not specified.

* configure.in: AC_SUBST variables that are used by ltconfig to
build libtool.

* ltconfig.in (irix6*): Do not override deplibs_check_method
here.

* libtool.m4: Do not AC_SUBST anything other than LIBTOOL.

--- a/configure.in
+++ b/configure.in
@@ -33,7 +33,9 @@ dnl Use the specified CC, RANLIB, and LD while running ltconfig.
 AC_PROG_CC
 AC_PROG_RANLIB
 AM_PROG_LD
+AC_SUBST(LD)
 AM_PROG_NM
+AC_SUBST(NM)
 AC_PROG_LN_S
 
 dnl For the `lineno' script (which puts line numbers into `ltconfig').
@@ -43,6 +45,7 @@ dnl Check for dlopen support
 AC_LIBTOOL_DLOPEN
 AC_LIBTOOL_SETUP
 AC_SUBST(DLLTOOL)
+AC_SUBST(FILE)
 AC_SUBST(OBJDUMP)
 AC_SUBST(AS)
 
