Corrected tag name variable in "END LIBTOOL TAG CONFIG: $tagname" text.

--- a/ltconfig.in
+++ b/ltconfig.in
@@ -2304,7 +2304,7 @@ EOF
 if test -z "$tagname"; then
   echo '### END LIBTOOL CONFIG' >> "$ofile"
 else
-  echo "### END LIBTOOL TAG CONFIG: $tag" >> "$ofile"
+  echo "### END LIBTOOL TAG CONFIG: $tagname" >> "$ofile"
 fi
 
 case "$ltmain" in
