* ltconfig.in (ltdll_obj): fixed typo: objdir -> $objdir

--- a/ltconfig.in
+++ b/ltconfig.in
@@ -1040,7 +1040,7 @@ EOF
     # recent cygwin and mingw systems supply a stub DllMain which the user
     # can override, but on older systems we have to supply one (in ltdll.c)
     if test "x$lt_cv_need_dllmain" = "xyes"; then
-      ltdll_obj='objdir/$soname-ltdll.'"$objext "
+      ltdll_obj='$objdir/$soname-ltdll.'"$objext "
       ltdll_cmds='test -f $objdir/$soname-ltdll.c || sed -e "/^# \/\* ltdll\.c starts here \*\//,/^# \/\* ltdll.c ends here \*\// { s/^# //; p; }" -e d < $0 > $objdir/$soname-ltdll.c~
         test -f $objdir/$soname-ltdll.$objext || (cd $objdir && $CC -c $soname-ltdll.c)~'
     else
