* libltdl/configure.in: path to auxiliary files can be specified   using --with-auxdir (idea by Howard Chu <hyc@highlandsun.com>)
* ltmain.in: don't remove multiple occurences from dependency_libs
  of a library, otherwise many dependencies would get lost

* bootstrap: use "aclocal -I ." instead of adding the contents
  of ltdl.m4 to acinclude.m4

--- a/ltmain.in
+++ b/ltmain.in
@@ -1952,15 +1952,7 @@ compiler."
 	esac
       done
       lib_search_path="$lib_search_path $sys_lib_search_path"
-      
-      # Make sure newdependency_libs contains only unique libraries and directories.
-      dependency_libs=
-      for deplib in $newdependency_libs; do
-	case "$dependency_libs " in
-	*" $deplib "*) ;;
-	*) dependency_libs="$dependency_libs $deplib" ;;
-	esac
-      done
+      dependency_libs="$newdependency_libs"
       
       # Eliminate all temporary directories.
       for path in $uninst_path; do
