--- a/libltdl/configure.in
+++ b/libltdl/configure.in
@@ -1,6 +1,10 @@
 dnl Process this file with autoconf to create configure.
 
 AC_INIT(ltdl.c)
+AC_ARG_WITH(auxdir,
+[  --with-auxdir=DIR   path to autoconf auxiliary files],,
+[if test -f ../config.sub; then with_auxdir=..; else with_auxdir=../..; fi])
+AC_CONFIG_AUX_DIR($with_auxdir)
 
 if test -z "$enable_ltdl_install$enable_ltdl_convenience"; then
   if test -f ${srcdir}/ltconfig && test -f ${srcdir}/ltmain.sh; then
