* libltdl/Makefile.am (ACLOCAL): Define with `-I .', as in bootstrap.

--- a/libltdl/Makefile.am
+++ b/libltdl/Makefile.am
@@ -2,6 +2,9 @@
 
 AUTOMAKE_OPTIONS = no-dependencies foreign
 
+## for ltdl.m4
+ACLOCAL = @ACLOCAL@ -I .
+
 if INSTALL_LTDL
 include_HEADERS = ltdl.h
 lib_LTLIBRARIES = libltdl.la
