* ltconfig.in (opt_cr, mingw*): replace unescaped ? with correctly escaped and portable {0,1} in sed expression.

--- a/ltconfig.in
+++ b/ltconfig.in
@@ -1827,7 +1827,7 @@ esac
 opt_cr=
 case "$host_os" in
 mingw*)
-  opt_cr=`echo 'x?' | tr x '\015'` # option cr in regexp
+  opt_cr=`echo 'x\{0,1\}' | tr x '\015'` # option cr in regexp
   ;;
 esac
 
