--- a/configure.in
+++ b/configure.in
@@ -42,6 +42,9 @@ AC_PROG_LN_S
 dnl For the `lineno' script (which puts line numbers into `ltconfig').
 AC_PROG_AWK
 
+dnl Check for win32 dll support
+AC_LIBTOOL_WIN32_DLL
+
 dnl Check for dlopen support
 AC_LIBTOOL_DLOPEN
 AC_LIBTOOL_SETUP
