* mdemo/README: Explain the deliberate incompleteness of the Windows port. * mdemo/configure.in: Use AC_LIBTOOL_WIN32_DLL. * mdemo/Makefile.am (LDFLAGS):  Add -no-undefined.

--- a/mdemo/Makefile.am
+++ b/mdemo/Makefile.am
@@ -10,11 +10,11 @@ lib_LTLIBRARIES = foo1.la libfoo2.la
 
 foo1_la_SOURCES = foo1.c
 foo1_la_LIBADD = $(LIBM)
-foo1_la_LDFLAGS = -module -avoid-version
+foo1_la_LDFLAGS = -no-undefined -module -avoid-version
 
 libfoo2_la_SOURCES = foo2.c
 libfoo2_la_LIBADD = $(LIBM)
-libfoo2_la_LDFLAGS = -module -export-symbols-regex "libfoo2.*"
+libfoo2_la_LDFLAGS = -no-undefined -module -export-symbols-regex "libfoo2.*"
 
 noinst_HEADERS = foo.h
 
