--- a/mdemo/configure.in
+++ b/mdemo/configure.in
@@ -14,6 +14,7 @@ dnl on demand even with broken makes
 AC_LIBLTDL_CONVENIENCE(../libltdl)
 AC_SUBST(LIBLTDL)
 
+AC_LIBTOOL_WIN32_DLL
 AC_LIBTOOL_DLOPEN
 AM_PROG_LIBTOOL
 AC_SUBST(LIBTOOL_DEPS)
