* ltconfig.in (Usage): Now it matches the code! Reported by Jon Leichter <jon@symas.com>

--- a/ltconfig.in
+++ b/ltconfig.in
@@ -248,7 +248,7 @@ do
 
   case "$option" in
   --help) cat <<EOM
-Usage: $progname [OPTION]... [HOST [LTMAIN]]
+Usage: $progname [OPTION]... LTMAIN [HOST]
 
 Generate a system-specific libtool script.
 
